--- a/ADMFacturar/Views/Shared/GCPars/_UpdateGrupoCorreo.cshtml
+++ b/ADMFacturar/Views/Shared/GCPars/_UpdateGrupoCorreo.cshtml
@@ -4,18 +4,18 @@
     <h2 class="text-lg font-semibold leading-7 text-white mb-4">Crear Grupo de Correos</h2>
     <div class="grid grid-cols-1 sm:grid-cols-s lg:grid-cols-1 gap-6">
         <div>
-            <input asp-for="Id" type="text" value="1" hidden/>
+            <input asp-for="Id" type="text" value="@Model.Id" hidden />
         </div>
         <div>
             <label class="block text-sm font-medium leading-6 text-white">Nombre</label>
             <div class="flex">
-                <input asp-for="Name" type="text" id="Name" class="mt-1 block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white placeholder-gray-400 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                <input asp-for="Name" type="text" id="Name" value="@Model.Name" class="mt-1 block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white placeholder-gray-400 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
             </div>
         </div>
         <div>
             <label class="block text-sm font-medium leading-6 text-white">Correos</label>
             <div class="flex">
-                <input asp-for="Correos" type="text" id="Correos" class="mt-1 block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white placeholder-gray-400 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
+                <input asp-for="Correos" type="text" id="Correos" value="@Model.Correos" class="mt-1 block w-full rounded-md bg-gray-700 border-0 py-1.5 text-white placeholder-gray-400 focus:ring-2 focus:ring-indigo-600 sm:text-sm sm:leading-6" style="padding-left: 10px;">
             </div>
         </div>
     </div>
@@ -24,3 +24,4 @@
         <button class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</button>
     </div>
 </form>
+
