Crud Template y ajustes G Correos

--- a/ADMFacturar/Views/Marketing/Index.cshtml
+++ b/ADMFacturar/Views/Marketing/Index.cshtml
@@ -105,9 +105,7 @@
 
             <div class="form-item">
                 <label class="block text-sm font-medium leading-6 text-white">Para:</label>
-                <input type="email" name="to" class="w-full rounded-md py-2 px-3 bg-gray-700 text-white placeholder-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" 
-                
-                />
+                <input type="email" name="to" class="w-full rounded-md py-2 px-3 bg-gray-700 text-white placeholder-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"/>
             </div>
             <div class="form-item">
                 <label class="block text-sm font-medium leading-6 text-white">Asunto:</label>
