--- a/ADMFacturar/Views/Shared/GCPars/_UpdateGrupoCorreo.cshtml
+++ b/ADMFacturar/Views/Shared/GCPars/_UpdateGrupoCorreo.cshtml
@@ -23,8 +23,8 @@
         </div>
     </div>
     <div class="mt-6 flex justify-end gap-x-4">
-        <button type="submit" id="btnGuardar" class="rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Guardar</button>
-        <button class="rounded-md bg-red-600 px-2 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Cancelar</button>
+        <a href="@Url.Action("GCIndex", "Marketing")" class="w-full py-2 px-4 bg-gray-600 hover:bg-gray-500 text-white rounded-lg text-center inline-block">Cancelar</a>
+        <button type="submit" id="btnGuardar" class="w-full py-2 px-4 bg-blue-600 hover:bg-blue-500 text-white rounded-lg">Guardar</button>
     </div>
 </form>
 
